messagepack-derive/tests/fail/enum.stderr
error: Encode derive is not yet supported for enums
 --> tests/fail/enum.rs:5:1
  |
5 | enum MyEnum {
  | ^^^^

error: Decode derive is not yet supported for enums
 --> tests/fail/enum.rs:5:1
  |
5 | enum MyEnum {
  | ^^^^
